# Voxenta-Agentic-AI

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
notebook/: testinitial.ipynb
src/: app.py  auth.py  conversation_db.py  utils.py
src/config/: __init__.py  chroma_config.py  langsmith_config.py  postgresDB_config.py  rabbitMq_config.py
src/controller/: __init__.py  auth.py  controller.py  evaluate_controller.py  home.py  webrtc.py
src/infra/message_broker/: connection.py  publisher.py  rabbit_consumer.py
src/node/: GraphState.py  __init__.py  graphConfig.py
src/node/AnswerLengthNode/: answer_length_analysis_node_config.py  answer_length_analysis_prompt.py
src/node/CoherenceEvalNode/: coherence_eval_node_config.py  coherence_eval_prompt.py
src/node/CorrectionNode/: __init__.py  correction_node_config.py  correction_node_prompt.py
src/node/GrammarEvalNode/: grammar_eval_node_config.py  grammar_eval_prompt.py
src/node/LexicalEvalNode/: lexical_eval_node_config.py  lexical_eval_prompt.py
src/node/PronunciationNode/: pronunciation_eval_node_config.py
src/node/StartNode/: start_node_config.py  start_node_prompt.py
src/node/ValidityNode/: __init__.py  (+2 more)
src/schemas/: __init__.py  common.py  scoring.py  ui_response.py  validity.py
src/utils/: __init__.py  assessment_response_adapter.py  env.py  eval_node_helper.py  length_utils.py  pronunciation_formatter.py  question_context_helper.py  schema_mapper.py  transcript_selector.py
src/vector/: chroma_client.py  indexer.py
(+3 files in other folders)
