[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "fastapi>=0.115.0",
    "PyJWT[crypto]>=2.10.0",
    "uvicorn[standard]>=0.34.0",
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "ipywidgets>=8.1.5",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langsmith>=0.3.18",
    "lxml>=5.3.1",
    "mcp-server-fetch>=2025.1.17",
    "mcp[cli]>=1.5.0",
    "openai>=1.68.2",
    "openai-agents>=0.0.15",
    "plotly>=6.0.1",
    "polygon-api-client>=1.14.5",
    "psutil>=7.0.0",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sendgrid>=6.11.0",
    "setuptools>=78.1.0",
    "smithery>=0.1.0",
    "speedtest-cli>=2.1.3",
    "wikipedia>=1.4.0",
    "psycopg[binary]>=3.2.0",
    "aio-pika>=9.0.0",
    "psycopg-pool>=3.3.0",
    "langgraph-checkpoint-postgres>=3.0.3",
    "uuid-utils>=0.13.0",
    "chromadb>=1.4.1",
    "aiortc>=1.9.0",
    "opencv-python-headless>=4.10.0",
    "mediapipe>=0.10.14",
    "ultralytics>=8.3.0",
    "numpy>=1.26.0",
    "pydantic>=2.8.0",
    "azure-cognitiveservices-speech>=1.50.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
